<resources>
    <string name="app_name">FakturKu</string>

    <!-- SPLASH SCREEN -->
    <string name="splash_screen_title">FakturKu</string>

    <!-- LOGIN -->
    <string name="login_title">FakturKu</string>
    <string name="login_email_hint">Email Personal Anda</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_login">Masuk</string>
    <string name="login_btn_register">Belum punya akun? DAFTAR di sini!</string>

    <!-- REGISTER -->
    <string name="register_name">Nama Lengkap</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Ulangi Password</string>
    <string name="register_btn_register">Daftar</string>
    <string name="register_button_login">Sudah memiliki akun? Masuk di sini!</string>
    <string name="register_title">FakturKu</string>

    <!-- DASHBOARD-->
    <string name="dashboard_dialog_exit_message">Apakah Anda yakin untuk keluar?</string>
    <string name="dashboard_dialog_exit_positive">Ya</string>
    <string name="dashboard_dialog_exit_negative">Tidak</string>
    <string name="dashboard_nav_header_default_company_name">Nama Perusahaan</string>

    <!-- DRAWER NAVIGATION -->
    <string name="drawer_nav_title_report">Laporan</string>
    <string name="drawer_nav_title_sell_product">Jual Barang</string>
    <string name="drawer_nav_title_add_product">Tambah Barang</string>
    <string name="drawer_nav_title_consignment">Konsinyasi</string>
    <string name="drawer_nav_title_stock_opname">Stok Opname</string>
    <string name="drawer_nav_title_settings">Pengaturan</string>
    <string name="drawer_nav_title_share">Ajak Teman</string>
    <string name="drawer_nav_title_rate">Beri Rating</string>
    <string name="drawer_nav_title_feedback">Kritik &amp; Saran</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- INVOICE -->
    <string name="invoice_title">Faktur</string>
    <string name="invoice_fab_sell">Penjualan</string>
    <string name="invoice_fab_buy">Pembelian</string>
    <string name="invoice_fab_cost">Biaya</string>
    <string name="invoice_menu_all">Semua</string>
    <string name="invoice_menu_debt">Belum lunas</string>
    <string name="invoice_menu_paid">Lunas</string>
    <string name="invoice_menu_draft">Draft</string>

    <!-- INVOICE DETAILS -->
    <string name="invoice_details_due_date">Batas Akhir</string>
    <string name="invoice_details_item">ITEM</string>
    <string name="invoice_details_total">Total</string>
    <string name="invoice_details_subtotal">Subtotal</string>
    <string name="invoice_details_tax">Pajak</string>
    <string name="invoice_details_paid">Sudah dibayar</string>
    <string name="invoice_details_due_amount">SISA</string>
    <string name="invoice_details_bottom_menu_send">Kirim</string>
    <string name="invoice_details_bottom_menu_edit">Ubah</string>
    <string name="invoice_details_bottom_menu_details">Detil</string>
    <string name="invoice_details_bottom_menu_pay">Bayar</string>
    <string name="invoice_details_bottom_menu_more">Lainnya</string>
    <string name="invoice_details_bottom_sheet_title">Pilhan Lainnya</string>
    <string name="invoice_details_bottom_sheet_delete">Hapus</string>

    <!-- INVOICE FORM-->
    <string name="invoice_form_attention">**) harus diisi</string>
    <string name="invoice_form_save">Simpan</string>
    <string name="invoice_form_backed_message">Anda sedang menginput data, yakin untuk keluar?</string>
    <string name="invoice_form_backed_positive">Ya, Keluar</string>
    <string name="invoice_form_backed_negative">Tidak</string>

    <!-- COSTUMER -->
    <string name="costumer_title">Pelanggan</string>

    <!-- COSTUMER DETAILS-->
    <string name="costumer_details_name">Nama Lengkap</string>
    <string name="costumer_details_phone">No HP</string>
    <string name="costumer_details_email">Email</string>
    <string name="costumer_details_address">Alamat</string>
    <string name="costumer_details_city">Kota</string>
    <string name="costumer_details_menu_update">update</string>
    <string name="costumer_details_menu_delete">hapus</string>

    <!-- COSTUMER FORM-->
    <string name="costumer_form_attention">**) harus diisi</string>
    <string name="costumer_form_name">Nama Lengkap **</string>
    <string name="costumer_form_phone">No HP **</string>
    <string name="costumer_form_email">Email **</string>
    <string name="costumer_form_city">Kota</string>
    <string name="costumer_form_address">Alamat</string>
    <string name="costumer_form_save">Simpan</string>
    <string name="costumer_form_backed_message">Anda sedang menginput data, yakin untuk keluar?</string>
    <string name="costumer_form_backed_positive">Ya, Keluar</string>
    <string name="costumer_form_backed_negative">Tidak</string>

    <!-- SUPPLIER -->
    <string name="supplier_title">Supplier</string>

    <!-- SUPPLIER DETAILS-->
    <string name="supplier_details_name">Nama Lengkap</string>
    <string name="supplier_details_phone">No HP</string>
    <string name="supplier_details_email">Email</string>
    <string name="supplier_details_address">Alamat</string>
    <string name="supplier_details_city">Kota</string>
    <string name="supplier_details_menu_update">update</string>
    <string name="supplier_details_menu_delete">hapus</string>

    <!-- SUPPLIER FORM-->
    <string name="supplier_form_attention">**) harus diisi</string>
    <string name="supplier_form_name">Nama Lengkap **</string>
    <string name="supplier_form_phone">No HP **</string>
    <string name="supplier_form_email">Email **</string>
    <string name="supplier_form_city">Kota</string>
    <string name="supplier_form_address">Alamat</string>
    <string name="supplier_form_save">Simpan</string>
    <string name="supplier_form_backed_message">Anda sedang menginput data, yakin untuk keluar?</string>
    <string name="supplier_form_backed_positive">Ya, Keluar</string>
    <string name="supplier_form_backed_negative">Tidak</string>

    <!-- PRODUCT -->
    <string name="product_title">Barang</string>
    <string name="product_adapter_list_buy_price">Harga Beli</string>
    <string name="product_adapter_list_sell_price">Harga Jual</string>

    <!-- PRODUCT DETAILS-->
    <string name="product_details_name">Nama Barang</string>
    <string name="product_details_buy_price">Harga Beli</string>
    <string name="product_details_sell_price">Harga Jual</string>
    <string name="product_details_notes">Keterangan</string>
    <string name="product_details_menu_update">update</string>
    <string name="product_details_menu_delete">hapus</string>

    <!-- PRODUCT FORM-->
    <string name="product_form_attention">**) harus diisi</string>
    <string name="product_form_name">Nama Barang **</string>
    <string name="product_form_buy_price">Harga Beli</string>
    <string name="product_form_sell_price">Harga Jual</string>
    <string name="product_form_notes">Keterangan</string>
    <string name="product_form_save">Simpan</string>
    <string name="product_form_backed_message">Anda sedang menginput data, yakin untuk keluar?</string>
    <string name="product_form_backed_positive">Ya, Keluar</string>
    <string name="product_form_backed_negative">Tidak</string>

    <!-- COST -->
    <string name="cost_title">Biaya</string>
    <string name="cost_adapter_list_cost_price">Besar Biaya</string>

    <!-- COST DETAILS-->
    <string name="cost_details_name">Nama Biaya **</string>
    <string name="cost_details_cost_price">Besar Biaya</string>
    <string name="cost_details_notes">Keterangan</string>
    <string name="cost_details_menu_update">update</string>
    <string name="cost_details_menu_delete">hapus</string>

    <!-- COST FORM-->
    <string name="cost_form_attention">**) harus diisi</string>
    <string name="cost_form_name">Nama Biaya</string>
    <string name="cost_form_cost_price">Besar Biaya</string>
    <string name="cost_form_notes">Keterangan</string>
    <string name="cost_form_save">Simpan</string>
    <string name="cost_form_backed_message">Anda sedang menginput data, yakin untuk keluar?</string>
    <string name="cost_form_backed_positive">Ya, Keluar</string>
    <string name="cost_form_backed_negative">Tidak</string>

    <!-- MY SETTINGS -->
    <string name="my_settings_title">Pengaturan</string>
    <string name="my_settings_account">Akun</string>
    <string name="my_settings_invoice">Faktur</string>

    <!-- SETTING INVOICE-->
    <string name="setting_invoice_payment_instruction">Instruksi Pembayaran</string>
    <string name="setting_invoice_payment_choice">Pilihan Pembayaran Pelanggan</string>
    <string name="setting_invoice_company_address">Alamat Perusahaan</string>
    <string name="setting_invoice_save">Simpan</string>
    <string name="setting_invoice_backed_message">Anda sedang menginput data, yakin untuk keluar?</string>
    <string name="setting_invoice_backed_positive">Ya, Keluar</string>
    <string name="setting_invoice_backed_negative">Tidak</string>

    <!-- SETTING ACCOUNT-->
    <string name="setting_account_personal_info">Info Pribadi</string>
    <string name="setting_account_info_default">-</string>
    <string name="setting_account_company_info">Info Perusahaan</string>

    <!-- ACCOUNT FORM-->
    <string name="account_form_attention">**) harus diisi</string>
    <string name="account_form_name">Nama Lengkap **</string>
    <string name="account_form_email">Email</string>
    <string name="account_form_phone">No telp/HP</string>
    <string name="account_form_address">Alamat Lengkap</string>
    <string name="account_form_city">Kota</string>
    <string name="account_form_company_name">Nama Perusahaan</string>
    <string name="account_form_company_email">Email Perusahaan</string>
    <string name="account_form_company_phone">No telp/HP Perusahaan</string>
    <string name="account_form_company_address">Alamat Lengkap Perusahaan</string>
    <string name="account_form_company_city">Kota</string>
    <string name="account_form_save">Simpan</string>
    <string name="account_form_backed_message">Anda sedang menginput data, yakin untuk keluar?</string>
    <string name="account_form_backed_positive">Ya, Keluar</string>
    <string name="account_form_backed_negative">Tidak</string>

</resources>
