<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountFormCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.settingAccountForm.SettingAccountFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:contentPaddingTop="30dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="20dp">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="5"
                            android:background="@color/colorTextBlack"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/setting_account_personal_info"
                            android:textColor="@color/colorTextBlack"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="@color/colorTextBlack"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/accountFormName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_name"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="textPersonName|textCapWords"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_name"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <EditText
                        android:id="@+id/accountFormEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_email"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="textEmailAddress"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_mail"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"
                        android:enabled="false"/>

                    <EditText
                        android:id="@+id/accountFormPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_phone"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="phone"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_phone"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <EditText
                        android:id="@+id/accountFormAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_address"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="textMultiLine"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_address"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <EditText
                        android:id="@+id/accountFormCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_city"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="textMultiLine"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_city"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/product_form_attention"
                        android:layout_gravity="end"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:contentPaddingTop="30dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="20dp">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="4"
                            android:background="@color/colorTextBlack"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/setting_account_company_info"
                            android:textColor="@color/colorTextBlack"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="@color/colorTextBlack"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/accountFormCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_company_name"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="textPersonName|textCapWords"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_company"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <EditText
                        android:id="@+id/accountFormCompanyEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_company_email"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="textEmailAddress"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_mail"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <EditText
                        android:id="@+id/accountFormCompanyPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_company_phone"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="phone"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_phone"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <EditText
                        android:id="@+id/accountFormCompanyAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_company_address"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="textMultiLine"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_address"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <EditText
                        android:id="@+id/accountFormCompanyCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_form_company_city"
                        android:textSize="14sp"
                        android:textColorHint="@color/colorTextPrimary"
                        android:inputType="textMultiLine"
                        android:theme="@style/MyTextInputLayoutStyle"
                        android:drawableStart="@drawable/ic_form_city"
                        android:drawablePadding="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="16dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/product_form_attention"
                        android:layout_gravity="end"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/accountFormBtnSave"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/account_form_save"
                android:textSize="16sp"
                android:theme="@style/PrimaryButton"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>